Address Page alignment issue

--- a/src/app/client-Acc-Page/admin/admin.component.css
+++ b/src/app/client-Acc-Page/admin/admin.component.css
@@ -13,8 +13,12 @@
 
 .my-custom-scrollbar {
     position: relative;
-    height: 600px;
+    /*height: 600px;*/ 
     overflow: auto;
+}
+
+.panel{
+    margin-bottom:5px;
 }
 
 
